test/corpus/doctype.txt
================================================================================
Basic doctype
================================================================================

!!!

--------------------------------------------------------------------------------

(source_file
  (doctype))

================================================================================
HTML5 doctype
================================================================================

!!! 5

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_version)))

================================================================================
XML doctype
================================================================================

!!! XML

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_xml)))

================================================================================
XML doctype with encoding
================================================================================

!!! XML iso-8859-1

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_xml_encoding)))

================================================================================
Strict doctype
================================================================================

!!! Strict

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_name)))

================================================================================
Transitional doctype
================================================================================

!!! Transitional

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_name)))

================================================================================
Frameset doctype
================================================================================

!!! Frameset

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_name)))

================================================================================
Basic doctype
================================================================================

!!! Basic

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_name)))

================================================================================
Mobile doctype
================================================================================

!!! Mobile

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_name)))

================================================================================
Doctype with following content
================================================================================

!!! 5
%html
  %head
    %title Test

--------------------------------------------------------------------------------

(source_file
  (doctype
    (doctype_version))
  (tag
    (tag_name)
    (tag
      (tag_name)
      (tag
        (tag_name)
        (verbatim_string)))))
