test/corpus/escaping.txt
================================================================================
Escaping equal sign
================================================================================

\= This is not Ruby

--------------------------------------------------------------------------------

(source_file
  (escaped_text))

================================================================================
Escaping percent sign
================================================================================

\%div This is not a tag

--------------------------------------------------------------------------------

(source_file
  (escaped_text))

================================================================================
Escaping hyphen
================================================================================

\- This is not Ruby code

--------------------------------------------------------------------------------

(source_file
  (escaped_text))

================================================================================
Escaping hash
================================================================================

\# This is not interpolation

--------------------------------------------------------------------------------

(source_file
  (escaped_text))

================================================================================
Escaped text in nested content
================================================================================

%div
  \= Not Ruby
  %p Text

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (escaped_text)
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Multiple escaped lines
================================================================================

\= First line
\- Second line
\# Third line

--------------------------------------------------------------------------------

(source_file
  (escaped_text)
  (escaped_text)
  (escaped_text))
