test/corpus/indentation.txt
================================================================================
Tab indentation
================================================================================

%div
	%p Tab (8 spaces equivalent)

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Deep nesting
================================================================================

%div
  %div
    %div
      %div
        %div
          %div
            %div
              %div
                %div
                  %div
                    %p Deep

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (tag
        (tag_name)
        (tag
          (tag_name)
          (tag
            (tag_name)
            (tag
              (tag_name)
              (tag
                (tag_name)
                (tag
                  (tag_name)
                  (tag
                    (tag_name)
                    (tag
                      (tag_name)
                      (tag
                        (tag_name)
                        (verbatim_string)))))))))))))

================================================================================
Mixed spaces and tabs
================================================================================

%div
  %p Two spaces
	%span One tab

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string))
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Blank lines between siblings
================================================================================

%div
  %p First

  %p Second

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string))
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Blank lines with different indentation
================================================================================

%div
  %p Child

  %span Another child

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string))
    (tag
      (tag_name)
      (verbatim_string))))
