test/corpus/line_endings.txt
================================================================================
CRLF line endings (Windows)
================================================================================

%div
  %p Hello

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string))))

================================================================================
Mixed CRLF and LF
================================================================================

%div
  %p First
%span Second

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (verbatim_string)))
  (tag
    (tag_name)
    (verbatim_string)))
