test/corpus/multiline.txt
================================================================================
Multiline pipe text
================================================================================

%p
  First line |
  second line |
  third line |
%p= a | b

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (verbatim_string))
  (tag
    (tag_name)
    (inline_ruby_block
      (ruby_code))))

================================================================================
Multiline pipe ruby
================================================================================

%hoo= h(                       |
  "I think this might get " +  |
  "pretty long so I should " + |
  "probably make it " +        |
  "multiline so it doesn't " + |
  "look awful.")               |
%p done

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (inline_ruby_block
      (ruby_code)))
  (tag
    (tag_name)
    (verbatim_string)))
