test/corpus/nesting.txt
================================================================================
Nesting with two tags
================================================================================

%foo
  %bar

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name))))

================================================================================
Nesting with three tags
================================================================================

%foo
  %bar
    %foo

--------------------------------------------------------------------------------

(source_file
  (tag
    (tag_name)
    (tag
      (tag_name)
      (tag
        (tag_name)))))
